@@ -7,10 +7,8 @@ import static org.mockito.Mockito.when;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
-import com.inditex.aqsw.framework.test.randomizer.RandomizerExtension;
 import com.inditex.rrhh.icmclcwb.api.app.tarea.dto.TareaAgrupacionCadenasDto;
 import com.inditex.rrhh.icmclcwb.api.app.tarea.dto.TareaDto;
 import com.inditex.rrhh.icmclcwb.api.ptr.venta.onlineentregadomicilio.dto.PtrVentaOnlineEntregaDomicilioResultItemDto;
@@ -22,7 +20,7 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 
-@ExtendWith({SpringExtension.class, RandomizerExtension.class})
+@ExtendWith({SpringExtension.class})
 public class TareaAgrupacionVentaMapperTest {
 
   @Mock
@@ -35,7 +33,7 @@ public class TareaAgrupacionVentaMapperTest {
     agrupacion.setImporteConImpuestos(BigDecimal.valueOf(40000D));
     agrupacion.setImporteSinImpuestos(BigDecimal.valueOf(34900D));
     when(this.tareaAgrupacionVentaMapper.ventaTotalizadoResponseItemDtoToTareaAgrupacionVenta(any(List.class), any(TareaDto.class),
-        any(List.class))).thenReturn(Arrays.asList(agrupacion));
+        any(List.class))).thenReturn(List.of(agrupacion));
 
     final List<TareaAgrupacionVenta> ventas = this.tareaAgrupacionVentaMapper
         .ventaTotalizadoResponseItemDtoToTareaAgrupacionVenta(list, this.createTarea(), this.createAgrupaciones());
@@ -51,7 +49,7 @@ public class TareaAgrupacionVentaMapperTest {
     agrupacion.setImporteConImpuestos(BigDecimal.valueOf(40000D));
     agrupacion.setImporteSinImpuestos(BigDecimal.valueOf(34900D));
     when(this.tareaAgrupacionVentaMapper.ventaTotalizadoResponseItemDtoToTareaAgrupacionVenta(any(List.class), any(TareaDto.class),
-        any(List.class))).thenReturn(Arrays.asList(agrupacion));
+        any(List.class))).thenReturn(List.of(agrupacion));
 
     final List<TareaAgrupacionVenta> presencias = this.tareaAgrupacionVentaMapper
         .ventaTotalizadoResponseItemDtoToTareaAgrupacionVenta(list, this.createTarea(), this.createAgrupaciones());
@@ -68,7 +66,7 @@ public class TareaAgrupacionVentaMapperTest {
     agrupacion.setImporteConImpuestos(BigDecimal.valueOf(40000D));
     agrupacion.setImporteSinImpuestos(BigDecimal.valueOf(34900D));
     when(this.tareaAgrupacionVentaMapper.ventaTotalizadoResponseItemDtoToTareaAgrupacionVenta(any(List.class), any(TareaDto.class),
-        any(List.class))).thenReturn(Arrays.asList(agrupacion));
+        any(List.class))).thenReturn(List.of(agrupacion));
 
     final List<TareaAgrupacionVenta> presencias = this.tareaAgrupacionVentaMapper
         .ventaTotalizadoResponseItemDtoToTareaAgrupacionVenta(list, this.createTarea(), this.createAgrupaciones());
@@ -83,7 +81,7 @@ public class TareaAgrupacionVentaMapperTest {
     agrupacion.setImporteConImpuestos(BigDecimal.valueOf(40000D));
     agrupacion.setImporteSinImpuestos(BigDecimal.valueOf(34900D));
     when(this.tareaAgrupacionVentaMapper.ventaTotalizadoResponseItemDtoToTareaAgrupacionVenta(any(List.class), any(TareaDto.class),
-        any(List.class))).thenReturn(Arrays.asList(agrupacion));
+        any(List.class))).thenReturn(List.of(agrupacion));
     final List<TareaAgrupacionVenta> presencias = this.tareaAgrupacionVentaMapper
         .ventaTotalizadoResponseItemDtoToTareaAgrupacionVenta(list, this.createTarea(), this.createAgrupaciones());
     assertNotNull(presencias);
@@ -97,7 +95,7 @@ public class TareaAgrupacionVentaMapperTest {
     agrupacion.setImporteConImpuestos(BigDecimal.valueOf(40000D));
     agrupacion.setImporteSinImpuestos(BigDecimal.valueOf(34900D));
     when(this.tareaAgrupacionVentaMapper.ventaTotalizadoResponseItemDtoToTareaAgrupacionVenta(any(List.class), any(TareaDto.class),
-        any(List.class))).thenReturn(Arrays.asList(agrupacion));
+        any(List.class))).thenReturn(List.of(agrupacion));
     final List<TareaAgrupacionVenta> presencias = this.tareaAgrupacionVentaMapper
         .ventaTotalizadoResponseItemDtoToTareaAgrupacionVenta(list, this.createTarea(), this.createAgrupaciones());
     assertNotNull(presencias);
@@ -113,7 +111,7 @@ public class TareaAgrupacionVentaMapperTest {
     agrupacion.setImporteConImpuestos(BigDecimal.valueOf(40000D));
     agrupacion.setImporteSinImpuestos(BigDecimal.valueOf(34900D));
     when(this.tareaAgrupacionVentaMapper.ventaTotalizadoResponseItemDtoToTareaAgrupacionVenta(any(List.class), any(TareaDto.class),
-        any(List.class))).thenReturn(Arrays.asList(agrupacion));
+        any(List.class))).thenReturn(List.of(agrupacion));
     final List<TareaAgrupacionVenta> presencias = this.tareaAgrupacionVentaMapper
         .ventaTotalizadoResponseItemDtoToTareaAgrupacionVenta(list, this.createTarea(), this.createAgrupaciones());
     assertNotNull(presencias);
@@ -128,7 +126,7 @@ public class TareaAgrupacionVentaMapperTest {
     agrupacion.setImporteSinImpuestos(BigDecimal.valueOf(34900D));
     when(
         this.tareaAgrupacionVentaMapper.ventaOnlineEntregaDomicilioResultItemDtoToTareaAgrupacionVenta(any(List.class), any(TareaDto.class),
-            any(List.class))).thenReturn(Arrays.asList(agrupacion));
+            any(List.class))).thenReturn(List.of(agrupacion));
     final List<TareaAgrupacionVenta> ventas = this.tareaAgrupacionVentaMapper
         .ventaOnlineEntregaDomicilioResultItemDtoToTareaAgrupacionVenta(list, this.createTarea(),
             this.createAgrupaciones());
@@ -144,7 +142,7 @@ public class TareaAgrupacionVentaMapperTest {
     agrupacion.setImporteSinImpuestos(BigDecimal.valueOf(34900D));
     when(
         this.tareaAgrupacionVentaMapper.ventaOnlineEntregaDomicilioResultItemDtoToTareaAgrupacionVenta(any(List.class), any(TareaDto.class),
-            any(List.class))).thenReturn(Arrays.asList(agrupacion));
+            any(List.class))).thenReturn(List.of(agrupacion));
     final List<TareaAgrupacionVenta> presencias = this.tareaAgrupacionVentaMapper
         .ventaOnlineEntregaDomicilioResultItemDtoToTareaAgrupacionVenta(list, this.createTarea(),
             this.createAgrupaciones());
@@ -162,7 +160,7 @@ public class TareaAgrupacionVentaMapperTest {
     agrupacion.setImporteSinImpuestos(BigDecimal.valueOf(34900D));
     when(
         this.tareaAgrupacionVentaMapper.ventaOnlineEntregaDomicilioResultItemDtoToTareaAgrupacionVenta(any(List.class), any(TareaDto.class),
-            any(List.class))).thenReturn(Arrays.asList(agrupacion));
+            any(List.class))).thenReturn(List.of(agrupacion));
     final List<TareaAgrupacionVenta> presencias = this.tareaAgrupacionVentaMapper
         .ventaOnlineEntregaDomicilioResultItemDtoToTareaAgrupacionVenta(list, this.createTarea(),
             this.createAgrupaciones());
@@ -178,7 +176,7 @@ public class TareaAgrupacionVentaMapperTest {
     agrupacion.setImporteSinImpuestos(BigDecimal.valueOf(34900D));
     when(
         this.tareaAgrupacionVentaMapper.ventaOnlineEntregaDomicilioResultItemDtoToTareaAgrupacionVenta(any(List.class), any(TareaDto.class),
-            any(List.class))).thenReturn(Arrays.asList(agrupacion));
+            any(List.class))).thenReturn(List.of(agrupacion));
     final List<TareaAgrupacionVenta> presencias = this.tareaAgrupacionVentaMapper
         .ventaOnlineEntregaDomicilioResultItemDtoToTareaAgrupacionVenta(list, this.createTarea(),
             this.createAgrupaciones());
@@ -194,7 +192,7 @@ public class TareaAgrupacionVentaMapperTest {
     agrupacion.setImporteSinImpuestos(BigDecimal.valueOf(34900D));
     when(
         this.tareaAgrupacionVentaMapper.ventaOnlineEntregaDomicilioResultItemDtoToTareaAgrupacionVenta(any(List.class), any(TareaDto.class),
-            any(List.class))).thenReturn(Arrays.asList(agrupacion));
+            any(List.class))).thenReturn(List.of(agrupacion));
     final List<TareaAgrupacionVenta> presencias = this.tareaAgrupacionVentaMapper
         .ventaOnlineEntregaDomicilioResultItemDtoToTareaAgrupacionVenta(list, this.createTarea(),
             this.createAgrupaciones());
@@ -212,7 +210,7 @@ public class TareaAgrupacionVentaMapperTest {
     agrupacion.setImporteSinImpuestos(BigDecimal.valueOf(34900D));
     when(
         this.tareaAgrupacionVentaMapper.ventaOnlineEntregaDomicilioResultItemDtoToTareaAgrupacionVenta(any(List.class), any(TareaDto.class),
-            any(List.class))).thenReturn(Arrays.asList(agrupacion));
+            any(List.class))).thenReturn(List.of(agrupacion));
     final List<TareaAgrupacionVenta> presencias = this.tareaAgrupacionVentaMapper
         .ventaOnlineEntregaDomicilioResultItemDtoToTareaAgrupacionVenta(list, this.createTarea(),
             this.createAgrupaciones());
